--- a/css/aui.css
+++ b/css/aui.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /*初始化*/
-*{margin:0;padding:0;box-sizing: border-box;}
+*{margin:0;padding:0;box-sizing: border-box;cursor: pointer}
 html,body{height:100%;}
 html{-webkit-text-size-adjust:none;}
 /*::-webkit-scrollbar {display:none;}*/
